# Mobile-Swarm-Navigation

./: CMakeLists.txt  README.md  install.sh  model_move.cc  model_move.hh  model_move.world  model_move_with_movement.world  path_publisher.cc  requirements.txt  semantic_database.csv  teleport_model.cc  teleport_model.hh
AI_ML_models/: README.md
AI_ML_models/Instance_Segmentation_Model_YOLOv8-seg/: args.yaml  events.out.tfevents.1733358730.katana.7341.0  results.csv
AI_ML_models/chatbot/: app.py  chatbot_README.md
Chatbot/: main.py
Chatbot(gemini-1.5-flash)/: app.py  chatbot.py  readme.md
Chatbot(gemini-1.5-flash)/templates/: index.html
Team_53_ws/auto_explore/: auto_explore_README.md
Team_53_ws/interpreter/: package.xml
Team_53_ws/scheduler/: Scheduler_README.md  package.xml  setup.py
Team_53_ws/semantic_mapper/: semantic_mapper_README.md
Team_53_ws/turtlebot3_multi_robot/: turtlebot3_3_multi_robot_README.md
Yolo image segmentation/: main.py
image_segmentation/: preprocess.ipynb.ipynb
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
semantic_mapping/: cluster.py  filter.py  main.py  transform.py
src/: app.py  chatbot_1.py
src/auto_explore/: CMakeLists.txt  package.xml
src/chatbot/: app.py
src/chatbot_UI/: app.py
src/explore/: CMakeLists.txt
src/interpreter/: Interpreter_README  setup.cfg  setup.py
src/my_world/: CMakeLists.txt
src/plugins/: CMakeCache.txt  Makefile  compile_commands.json
src/scheduler/: package.xml  setup.py
src/semantic_mapper/: package.xml  setup.py
(+967 files in other folders)
